--- a/src/Acme/MyBundle/Resources/views/Default/add_goods.html.twig
+++ b/src/Acme/MyBundle/Resources/views/Default/add_goods.html.twig
@@ -1,6 +1,6 @@
 {% extends '@AcmeMy/Default/layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     addgoods!!!!!!!!!!!!!!!!!!!
 {% endblock %}
 
