--- a/src/Acme/MyBundle/Resources/views/Default/goods.html.twig
+++ b/src/Acme/MyBundle/Resources/views/Default/goods.html.twig
@@ -1,5 +1,5 @@
 {% extends '@AcmeMy/Default/layout.html.twig' %}
-{% block body %}
+{% block content %}
 
         <h1>Test bundle</h1>
 {% endblock %}
