--- a/src/Acme/MyBundle/Resources/views/Default/index.html.twig
+++ b/src/Acme/MyBundle/Resources/views/Default/index.html.twig
@@ -1,6 +1,27 @@
 {% extends '@AcmeMy/Default/layout.html.twig'%}
+{% block content %}
+    <div class="block">
+        <h2>{{ test|capitalize }}</h2>
+        <address>
+                <b><span>It's my work!</span></b><br>
+                <b>
+                   <span>email:</span>
+                    <a href="mailto:Alexey.panteleychuk@gmail.com">{{ email|reverse|title }}</a>
+                </b>
+        </address>
+    </div>
 
-{% block body %}
+    {% autoescape 'html' %}
+        {% set num = '<strong>1</strong>' %}
+        {{ number|raw }} - using filter |raw <br/>
+        {{ html }}
+    {% endautoescape %}
 
-Home!
+    {% set code = '<code>echo $i;</code>' %}
+    {% if code is defined %}
+        <h3>Code behind this page</h3>
+        <div class="symfony-content">{{ code|raw }}</div>
+    {% endif %}
 {% endblock %}
+
+
