--- a/src/Acme/MyBundle/Resources/views/Default/layout.html.twig
+++ b/src/Acme/MyBundle/Resources/views/Default/layout.html.twig
@@ -16,45 +16,33 @@
     {% endblock %}
 
 </head>
-<body>
-<header class="navbar navbar-default navbar-fixed-top" role="banner">
-    <div class="container">
-        <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="/" class="navbar-brand">Home</a>
-        </div>
-        <nav class="collapse navbar-collapse" role="navigation">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="{{ path('goods')}}">Goods</a>
-                </li>
-                <li>
-                    <a href="{{ path('add_goods') }}">AddGoods</a>
-                </li>
-                </ul>
-            <ul class="nav navbar-right navbar-nav">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-search"></i></a>
-                    <ul class="dropdown-menu" style="padding:12px;">
-                        <form class="form-inline">
-                            <button type="submit" class="btn btn-default pull-right"><i class="glyphicon glyphicon-search"></i></button><input type="text" class="form-control pull-left" placeholder="Search">
-                        </form>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</header>
 {% block body %}
-{% endblock %}
+    <body>
+        {% block menu %}
+            <header class="navbar navbar-default navbar-fixed-top" role="banner">
+                <div class="container">
+                    <div class="navbar-header">
+                        <ul class="nav navbar-nav">
+                            <li>
+                                <a href="/" class="navbar-brand">Home</a>
+                            </li>
+                            <li>
+                                <a href="{{ path('goods')}}">Goods</a>
+                            </li>
+                            <li>
+                                <a href="{{ path('add_goods') }}">AddGoods</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
+        {% endblock %}
+        {% block title %}{% endblock %}
+        {% block content %}{% endblock %}
 
-<!-- script references -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-<!--<script src="js/bootstrap.min.js"></script>-->
-</body>
+    <!-- script references -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <!--<script src="js/bootstrap.min.js"></script>-->
+    </body>
+{% endblock %}
 </html>
