--- a/src/Acme/MyBundle/Resources/views/Default/add_goods.html.twig
+++ b/src/Acme/MyBundle/Resources/views/Default/add_goods.html.twig
@@ -1,4 +1,5 @@
 {% extends '@AcmeMy/Default/layout.html.twig' %}
+{% block title %} Add Goods{% endblock %}
 
 {% block content %}
     addgoods!!!!!!!!!!!!!!!!!!!
