--- a/src/Acme/MyBundle/Resources/views/Default/goods.html.twig
+++ b/src/Acme/MyBundle/Resources/views/Default/goods.html.twig
@@ -1,5 +1,8 @@
 {% extends '@AcmeMy/Default/layout.html.twig' %}
-{% block content %}
+{% block title %}Goods{% endblock %}
 
-        <h1>Test bundle</h1>
+{% block content %}
+        <div class="block">
+                <h1>Goods !</h1>
+        </div>
 {% endblock %}
